--- a/index.ipynb
+++ b/index.ipynb
@@ -1,6 +1,35 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Understanding Pandas Series and DataFrames - Lab"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Introduction\n",
+    "\n",
+    "In this lab, let's get some hands on practice working with data cleanup using Pandas."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Objectives\n",
+    "You will be able to:\n",
+    "\n",
+    "* Create Series & DataFrames from dictionaries and lists\n",
+    "* Manipulate columns in DataFrames (df.rename, df.drop)\n",
+    "* Manipulate the index in DataFrames (df.reindex, df.drop, df.rename)\n",
+    "* Manipulate column datatypes"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -373,7 +402,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
