--- a/index.ipynb
+++ b/index.ipynb
@@ -4,28 +4,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Understanding Pandas Series and DataFrames - Lab"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Introduction\n",
+    "# Understanding Pandas Series and DataFrames - Lab\n",
     "\n",
-    "In this lab, let's get some hands on practice working with data cleanup using Pandas."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "## Introduction\n",
+    "\n",
+    "In this lab, let's get some hands on practice working with data cleanup using Pandas.\n",
+    "\n",
     "## Objectives\n",
     "You will be able to:\n",
     "\n",
     "* Manipulate columns in DataFrames (df.rename, df.drop)\n",
     "* Manipulate the index in DataFrames (df.reindex, df.drop, df.rename)\n",
-    "* Manipulate column datatypes"
+    "* Manipulate column datatypes\n",
+    "\n",
+    "## Let's get started!"
    ]
   },
   {
@@ -215,7 +207,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Rename all the columns to lower case"
+    "## Rename all the columns to lower case"
    ]
   },
   {
@@ -233,7 +225,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Change the Index to be the Line Names"
+    "## Change the Index to be the Line Names"
    ]
   },
   {
@@ -251,7 +243,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Painstakingly change the index back"
+    "## Painstakingly change the index back"
    ]
   },
   {
@@ -269,7 +261,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create another column 'Num_Lines' that is a count of how many lines pass through a station. Then sort your dataframe by this column in descending order."
+    "## Create another column 'Num_Lines' that is a count of how many lines pass through a station. Then sort your dataframe by this column in descending order"
    ]
   },
   {
@@ -287,7 +279,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Write a function to clean a column name."
+    "## Write a function to clean a column name"
    ]
   },
   {
@@ -352,7 +344,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Is there more subway traffic on a weekend or a weekday?    Be specific in comparing magnitudes."
+    "## Is there more subway traffic on a weekend or a weekday?    Be specific in comparing magnitudes"
    ]
   },
   {
@@ -370,7 +362,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Drop a couple of columns"
+    "## Drop a couple of columns"
    ]
   },
   {
@@ -382,6 +374,15 @@
    "outputs": [],
    "source": [
     "# Your code here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Summary\n",
+    "\n",
+    "Great! You practiced your data cleanup-skills using Pandas."
    ]
   }
  ],
@@ -401,7 +402,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
