Rewording and adding analysis question on misleading graphs.

--- a/index.ipynb
+++ b/index.ipynb
@@ -621,7 +621,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Compare subway traffic by day of the week. Display this as a graph"
+    "## Group the Data by Day of Week and Plot the Sum of The Numeric Columns"
    ]
   },
   {
@@ -692,7 +692,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Is there more subway traffic on a weekend or a weekday?    Be specific in comparing magnitudes"
+    "## Group the Data by Weekend/Weekday and Plot the Sum of the Numeric Columns"
    ]
   },
   {
@@ -849,6 +849,22 @@
     "grouped['IsWeekend'] = grouped.Dayofweek.map({0:False,1:False,2:False,3:False,4:False,5:True,6:True})\n",
     "wkend = grouped.groupby('IsWeekend').sum()\n",
     "wkend[['ENTRIES', 'EXITS']].plot(kind='barh')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Analysis Question: \n",
+    "\n",
+    "What is misleading about the day of week and weekend/weekday charts you just plotted?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> **Answer**: The raw data for entries/exits is cumulative. As such, you would first need to order the data by time and station, and then calculate the difference in order to produce meaningful aggregations."
    ]
   },
   {
@@ -1069,7 +1085,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
