--- a/index.ipynb
+++ b/index.ipynb
@@ -394,6 +394,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Change the index back"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -536,8 +543,7 @@
     }
    ],
    "source": [
-    "# Painstakingly change the index back\n",
-    "df = df.reset_index() #Not that painful\n",
+    "df = df.reset_index() \n",
     "df.head()"
    ]
   },
