--- a/index.ipynb
+++ b/index.ipynb
@@ -228,7 +228,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Painstakingly change the index back"
+    "# Change the index back"
    ]
   },
   {
@@ -311,7 +311,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Compare subway traffic by day of the week. Display this as a graph."
+    "## Group the Data by Day of Week and Plot the Sum of The Numeric Columns"
    ]
   },
   {
@@ -329,7 +329,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Is there more subway traffic on a weekend or a weekday?    Be specific in comparing magnitudes"
+    "## Group the Data by Weekend/Weekday and Plot the Sum of the Numeric Columns"
    ]
   },
   {
@@ -347,7 +347,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  "
+    "## Analysis Question: \n",
+    "\n",
+    "What is misleading about the day of week and weekend/weekday charts you just plotted?"
    ]
   },
   {
@@ -355,6 +357,15 @@
    "metadata": {},
    "source": [
     "  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Your answer here "
    ]
   },
   {
