--- a/index.ipynb
+++ b/index.ipynb
@@ -591,7 +591,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Change the index back"
+    "## Change the index back"
    ]
   },
   {
