--- a/index.ipynb
+++ b/index.ipynb
@@ -13,9 +13,9 @@
     "## Objectives\n",
     "You will be able to:\n",
     "\n",
-    "* Manipulate columns in DataFrames (df.rename, df.drop)\n",
-    "* Manipulate the index in DataFrames (df.reindex, df.drop, df.rename)\n",
-    "* Manipulate column datatypes\n",
+    "* Manipulate columns in DataFrames (`df.rename()`, `df.drop()`) \n",
+    "* Manipulate the index in DataFrames (`df.reindex()`, `df.drop()`, `df.rename()`) \n",
+    "* Manipulate column datatypes \n",
     "\n",
     "## Let's get started!"
    ]
@@ -198,7 +198,7 @@
    ],
    "source": [
     "df = pd.read_csv('turnstile_180901.txt')\n",
-    "print(len(df))\n",
+    "print(df.shape)\n",
     "df.head()"
    ]
   },
@@ -356,7 +356,7 @@
    "source": [
     "# __SOLUTION__ \n",
     "df = pd.read_csv('turnstile_180901.txt')\n",
-    "print(len(df))\n",
+    "print(df.shape)\n",
     "df.head()"
    ]
   },
@@ -591,7 +591,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Change the index back"
+    "## Remove the index"
    ]
   },
   {
@@ -757,7 +757,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create another column 'Num_Lines' that is a count of how many lines pass through a station. Then sort your dataframe by this column in descending order\n",
+    "## Create another column 'Num_Lines' that is a count of how many lines pass through a station. Then sort your DataFrame by this column in descending order\n",
     "*Hint: According to the [data dictionary](http://web.mta.info/developers/resources/nyct/turnstile/ts_Field_Description.txt), LINENAME represents all train lines that can be boarded at a given station. Normally lines are represented by one character. For example, LINENAME 456NQR represents trains 4, 5, 6, N, Q, and R.*"
    ]
   },
@@ -1405,7 +1405,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
