--- a/index.ipynb
+++ b/index.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "## Introduction\n",
     "\n",
-    "In this lab, let's get some hands on practice working with data cleanup using Pandas.\n",
+    "In this lab, let's get some hands-on practice working with data cleanup using Pandas.\n",
     "\n",
     "## Objectives\n",
     "You will be able to:\n",
@@ -581,7 +581,7 @@
    "source": [
     "## Summary\n",
     "\n",
-    "Great! You practiced your data cleanup-skills using Pandas."
+    "Great! You practiced your data cleanup skills using Pandas."
    ]
   }
  ],
