deploy grammar edits

--- a/index.ipynb
+++ b/index.ipynb
@@ -13,9 +13,9 @@
     "## Objectives\n",
     "You will be able to:\n",
     "\n",
-    "* Manipulate columns in DataFrames (`df.rename()`, `df.drop()`) \n",
-    "* Manipulate the index in DataFrames (`df.reindex()`, `df.drop()`, `df.rename()`) \n",
-    "* Manipulate column datatypes \n",
+    "- Manipulate columns in DataFrames (`df.rename()`, `df.drop()`) \n",
+    "- Manipulate the index in DataFrames (`df.reindex()`, `df.drop()`, `df.rename()`) \n",
+    "- Manipulate column datatypes \n",
     "\n",
     "## Let's get started!"
    ]
