--- a/index.ipynb
+++ b/index.ipynb
@@ -937,7 +937,7 @@
    "outputs": [],
    "source": [
     "# Group the data by weekend/weekday and plot the sum of the numeric columns\n",
-    "wkend = grouped.groupby('is_weekend').mean()\n",
+    "wkend = grouped.groupby('is_weekend').sum()\n",
     "wkend[['entries', 'exits']].plot(kind='barh')\n",
     "plt.show()"
    ]
@@ -1136,7 +1136,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.4"
   },
   "toc": {
    "base_numbering": 1,
