--- a/index.ipynb
+++ b/index.ipynb
@@ -750,7 +750,7 @@
    "outputs": [],
    "source": [
     "# Group the data by day of week and plot the sum of the numeric columns\n",
-    "grouped = df.groupby('day_of_week').sum()\n",
+    "grouped = df.groupby('day_of_week').sum(numeric_only = True)\n",
     "grouped.plot(kind='barh')\n",
     "plt.show()"
    ]
