Fixed deprecation warnings
Missed a few more of the same....
numeric_only = True

--- a/index.ipynb
+++ b/index.ipynb
@@ -776,7 +776,7 @@
    "source": [
     "# __SOLUTION__ \n",
     "# Group the data by day of week and plot the sum of the numeric columns\n",
-    "grouped = df.groupby('day_of_week').sum()\n",
+    "grouped = df.groupby('day_of_week').sum(numeric_only = True)\n",
     "grouped.plot(kind='barh')\n",
     "plt.show()"
    ]
@@ -937,7 +937,7 @@
    "outputs": [],
    "source": [
     "# Group the data by weekend/weekday and plot the sum of the numeric columns\n",
-    "wkend = grouped.groupby('is_weekend').sum()\n",
+    "wkend = grouped.groupby('is_weekend').sum(numeric_only = True)\n",
     "wkend[['entries', 'exits']].plot(kind='barh')\n",
     "plt.show()"
    ]
@@ -963,7 +963,7 @@
    "source": [
     "# __SOLUTION__ \n",
     "# Group the data by weekend/weekday and plot the sum of the numeric columns\n",
-    "wkend = grouped.groupby('is_weekend').sum()\n",
+    "wkend = grouped.groupby('is_weekend').sum(numeric_only = True)\n",
     "wkend[['entries', 'exits']].plot(kind='barh')\n",
     "plt.show()"
    ]
