--- a/index.ipynb
+++ b/index.ipynb
@@ -18,7 +18,7 @@
     "- Change the index of a pandas DataFrame \n",
     "- Change data types of columns in pandas DataFrames \n",
     "\n",
-    "## Let's get started! \n",
+    "## Let's get started \n",
     "\n",
     "Import the file `'turnstile_180901.txt'`. "
    ]
@@ -1149,7 +1149,7 @@
    "source": [
     "## Summary\n",
     "\n",
-    "Great! You practiced your data cleanup skills using Pandas."
+    "You practiced your data cleanup skills using Pandas."
    ]
   }
  ],
